--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: geograkom
+      POSTGRES_DB: ${POSTGRES_DBNAME}
     volumes:
     - ./init.sql:/docker-entrypoint-initdb.d/init.sql
     ports:
